<resources>
    <string name="app_name">Soleek App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_icon">login icon</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_worry_we_got_you_covered">Don’t worry, We got you covered</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_email">Send Email</string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="we_ve_sent_you_a_code_to_your_e_mail_abc_soleek_com">We’ve sent you a code to your e-mail: abc@soleek.com</string>
    <string name="verify">Verify</string>
    <string name="resetting_password">Resetting password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type New password</string>
    <string name="reset">Reset</string>
    <string name="soleeklab_background">soleeklab background</string>
    <string name="email_messages">We’ve sent you a code to your e-mail: %1$s</string>
    <string name="error_short_password">Password can’t be less that 8 letters</string>
    <string name="error_match_password">Password does not match</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="login_to_your_account_to_start_use_the_system">Login to your account to start use the system</string>
    <string name="arrow_back">arrow back</string>
    <string name="wrong_code">Wrong code</string>
    <string name="splash_screen">splash screen</string>
    <string name="soleek_logo">Soleek Logo</string>
    <string name="resend">Resend</string>
    <string name="astronaut_image">astronaut image</string>
    <string name="disconnected">Disconnected</string>
    <string name="there_s_no_internet_connection_to_reach_for_soleek_in_the_space">There’s no internet connection to reach for Soleek in the space!</string>
    <string name="done">Done</string>
    <string name="reset_timer_image">reset timer image</string>
    <string name="preference_file_key">com.soleeklab.muhammad.soleekapp.SHARED_PREFERENCES</string>
    <string name="user_profile_picture">user profile picture</string>


    <string name="vacation_text">You’re on a vacation, Stay Away!</string>
    <string name="absence_text">You’ve been marked as Absent for today</string>
    <string name="away_text">Looks like you’re so far away from Soleek planet!</string>

    <string name="title_home">Home</string>
    <string name="title_vacation">Vacation</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_notification">Notification</string>
    <string name="title_more">More</string>
    <string name="check_in">Check-in</string>
    <string name="user_status_picture">User status picture</string>
    <string name="check_out">Check-out</string>
    <string name="task_deadline">Deadline: %1$s</string>
    <string name="check_out_messages">Checked-in %1$s (%2$s)</string>
    <string name="task_progress">%1$d/%2$s</string>
    <string name="tasks_this_week">Tasks this week</string>
    <string name="view_all_tasks">View all tasks from task tab</string>
    <string name="hippotherapist">Hippotherapist</string>
    <string name="are_you_sure_you_want_to_mark_this_task_as_done">Are you sure you want to mark this task as done?</string>
    <string name="attendance">Attendance</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="history_icon">history icon</string>
    <string name="feedback_icon">feedback icon</string>
    <string name="logout_icon">logout icon</string>
    <string name="no_notification_icon">No notification icon</string>
    <string name="no_notifications">No notifications</string>
    <string name="you_didn_t_request_any_vacations_yet_wanna_travel">You didn’t request any vacations yet! Wanna Travel?</string>
    <string name="new_vacation">New Vacation</string>
    <string name="oppa_you_ve_no_tasks_for_today_at_all">Oppa! You’ve no tasks for today at all</string>
    <string name="no_attendance_icon">No attendance icon</string>
    <string name="no_attendance_yet">No Attendance yet</string>
    <string name="no_tasks_icon">no tasks icon</string>
    <string name="vacation_icon">vacation icon</string>
    <string name="cancel">Cancel</string>
    <string name="logging_out">Logging out</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="stay">Stay</string>
    <string name="starting_date">Starting Date</string>
    <string name="don_t_hesitate_to_send_your_feedback">Don’t hesitate to send your feedback</string>
    <string name="image_arrow_back">Image arrow back</string>
    <string name="task_done">Done: </string>
    <string name="you_marked_done_at">You Marked Done: %1$s</string>
    <string name="changed_by">— —Changed By %1$s: %2$s</string>
    <string name="text_for">for</string>
    <string name="tasks_todo">ToDo</string>

    <string name="date_format">h:mm a</string>
    <string name="original_date_format">yyyy-MM-dd HH:mm:ss</string>

    <string name="checkin_msg">Check-in %1$s</string>
    <string name="checkout_msg">Check-out %1$s</string>
    <string name="total_time_msg">(%1$s)</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="request">Request</string>
    <string name="no_internet_connection">No Internet Connection!</string>
</resources>
