<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.ForgetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/AuthHolder">

            <ImageView
                android:id="@+id/iv_icon"
                style="@style/AuthIcons"
                android:contentDescription="@string/login_icon"
                android:src="@drawable/ic_shield" />

            <TextView
                android:id="@+id/tv_forget_pass"
                style="@style/AuthDetails"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/forget_password_message"
                style="@style/AuthMoreDetails"
                android:text="@string/don_t_worry_we_got_you_covered" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_forget_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center_vertical"
                android:textColorHint="@color/colorGray">

                <EditText
                    android:id="@+id/forget_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorInputText"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send_email"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_gray"
                android:text="@string/send_email"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ib_back"
        android:layout_width="@dimen/auth_back_btn_width"
        android:layout_height="@dimen/auth_back_btn_height"
        android:layout_marginStart="@dimen/auth_back_btn_margin_start"
        android:layout_marginLeft="@dimen/auth_back_btn_margin_start"
        android:layout_marginTop="@dimen/auth_back_btn_margin_top"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/ic_back_1" />
</FrameLayout>