<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    tools:context=".Fragments.ResettingPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/AuthHolder">

            <ImageView
                android:id="@+id/iv_icon"
                style="@style/AuthIcons"
                android:contentDescription="@string/login_icon"
                android:src="@mipmap/ic_shield" />

            <TextView
                android:id="@+id/tv_resetting_pass"
                style="@style/AuthDetails"
                android:text="@string/resetting_password" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/round_view_red"
                android:gravity="center_vertical"
                android:text="@string/wrong_code"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_new_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center_vertical"
                app:errorTextAppearance="@style/itl_error_appearance"
                app:hintTextAppearance="@style/itl_normal_appearance"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorTextDark"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_retype_new_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:gravity="center_vertical"
                app:errorTextAppearance="@style/itl_error_appearance"
                app:hintTextAppearance="@style/itl_normal_appearance"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/retype_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_type_new_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorTextDark"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/reset"
                style="@style/AuthBtn"
                android:background="@drawable/button_gray"
                android:text="@string/reset"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/ib_back"
        style="@style/AuthBackButton"
        android:contentDescription="@string/arrow_back" />
</FrameLayout>