<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Fragments.MoreFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorWhite">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_action_bar_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14sp"
                android:text="More"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.15"
        android:background="#57606f" />

    <LinearLayout
        android:id="@+id/ll_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_frag_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="25dp"
        android:paddingEnd="16dp"
        android:paddingBottom="25dp">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:contentDescription="@string/history_icon"
            android:src="@mipmap/history" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/attendance"
            android:textColor="@color/colorInputText"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.15"
        android:background="#57606f" />

    <LinearLayout
        android:id="@+id/ll_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_frag_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="25dp"
        android:paddingEnd="16dp"
        android:paddingBottom="25dp">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:contentDescription="@string/feedback_icon"
            android:src="@mipmap/share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/feedback"
            android:textColor="@color/colorInputText"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.15"
        android:background="#57606f" />


    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_frag_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="25dp"
        android:paddingEnd="16dp"
        android:paddingBottom="25dp">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="20dp"
            android:contentDescription="@string/logout_icon"
            android:src="@mipmap/export" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/logout"
            android:textColor="@color/colorInputText"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.15"
        android:background="#57606f" />
</LinearLayout>